Refactor: categorizedDishes 뿌려보기

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     import: secret.yml
   datasource:
     url:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name:
     username:
     password:
