Docs: 테스트 데이터 추가 및 네이밍 변경, yml 파일 수정

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -1,8 +1,5 @@
 spring:
   config:
-    import: secret.yml
-  datasource:
-    url:
-    driver-class-name:
-    username:
-    password:
+    activate:
+      on-profile: application-local.yml
+
