--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   config:
     activate:
-      import: application-local.yml
+      on-profile: application-prod.yml
 
 logging:
   level:
