--- a/BE/src/main/resources/application-prod.yml
+++ b/BE/src/main/resources/application-prod.yml
@@ -1,7 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://3.37.194.187:3306/dish2?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: nori
-    password:
+    url: ${MYSQL_DATABASE_URL}
+    username: ${MYSQL_DATABASE_USERNAME}
+    password: ${MYSQL_DATABASE_PASSWORD}
 
+logging:
+  level:
+    org:
+      springframework:
+        jdbc:
+          core:
+            JdbcTemplate: DEBUG
