--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -1,12 +1,3 @@
 spring:
-  config:
-    activate:
-      on-profile: application-prod.yml
-
-logging:
-  level:
-    org:
-      springframework:
-        jdbc:
-          core:
-            JdbcTemplate: DEBUG
+  profiles:
+    active: ${profile}
