--- a/BE/src/main/resources/application-prod.yml
+++ b/BE/src/main/resources/application-prod.yml
@@ -1,3 +1,8 @@
+github:
+  secret: ${GITHUB_SECRET}
+  client:
+    id: ${GITHUB_CLIENT_ID}
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
